[package]
name = "enhancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = "0.8.0"
burn-autodiff = "0.8.0"
burn-tch = "0.8.0"
serde = { version = "1.0.164", features = ["std", "derive"] }
image = "0.24.6"
tensorboard-rs = "0.5.9"
num-traits = "0.2.16"
ndarray = "0.15.6"
lab = "0.11.0"
burn-wgpu = "0.8.0"
